# rust_api_sutdy

./: readme.md
backend/back_api/: Cargo.toml
backend/back_api/source/: config.toml
backend/back_api/src/: config.rs  database.rs  main.rs
backend/back_api/src/database/: clickhouse.rs  mod.rs
doc/: 前端开发容器准备.md  后端开发容器准备.md
frontend/front_app/src/: app.tsx
source/: clickhouse_selfbuild.dockerfile  development.dockercompose.yaml
