[package]
name = "back_api"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = ">= 1.0.1"
axum = ">= 0.8.8"
clickhouse = ">= 0.12.2"
serde = { version = ">= 1.0", features = ["derive"] }
tokio = { version = ">= 1", features = ["full"] }

[dev-dependencies]
clickhouse = { version = ">= 0.12.2", features = ["test-util"] }
